--- a/vhh_server/package.json
+++ b/vhh_server/package.json
@@ -19,8 +19,15 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "@types/jest": "^26.0.10",
+    "@types/node": "^14.6.0",
+    "@types/react": "^16.9.47",
+    "@types/react-dom": "^16.9.8",
+    "css-loader": "^4.2.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "style-loader": "^1.2.1",
+    "typescript": "^4.0.2"
   }
 }
